Creacion de una funcion filtro para obtener productos con y sin stock, en forma de lista